[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "groq>=0.33.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "uvicorn>=0.38.0",
]
